// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transportchip Component should allow setting the transport type manually 1`] = `
<div>
  <span
    class="db-transportchip"
  >
    <span
      class="db-transportchip__line db-transportchip--bus db-transportchip--u1"
    >
      <span
        class="db-transportchip__text db-transportchip__text--short-prefix"
      >
        U
      </span>
      <span
        class="db-transportchip__text"
      >
        1
      </span>
    </span>
  </span>
</div>
`;

exports[`Transportchip Component should detect the train type S-Bahn from S 1 1`] = `
<div>
  <span
    class="db-transportchip"
  >
    <span
      class="db-transportchip__line db-transportchip--suburban db-transportchip--s1"
    >
      <span
        class="db-transportchip__text db-transportchip__text--short-prefix"
      >
        S
      </span>
      <span
        class="db-transportchip__text"
      >
        1
      </span>
    </span>
  </span>
</div>
`;

exports[`Transportchip Component should detect the train type S-Bahn from S1 1`] = `
<div>
  <span
    class="db-transportchip"
  >
    <span
      class="db-transportchip__line db-transportchip--suburban db-transportchip--s1"
    >
      <span
        class="db-transportchip__text db-transportchip__text--short-prefix"
      >
        S
      </span>
      <span
        class="db-transportchip__text"
      >
        1
      </span>
    </span>
  </span>
</div>
`;

exports[`Transportchip Component should have normal spacing for products with one character 1`] = `
<div>
  <span
    class="db-transportchip"
  >
    <span
      class="db-transportchip__line db-transportchip--suburban db-transportchip--s1"
    >
      <span
        class="db-transportchip__text db-transportchip__text--short-prefix"
      >
        S
      </span>
      <span
        class="db-transportchip__text"
      >
        1
      </span>
    </span>
  </span>
</div>
`;

exports[`Transportchip Component should have normal spacing for products with three characters 1`] = `
<div>
  <span
    class="db-transportchip"
  >
    <span
      class="db-transportchip__line db-transportchip--ice db-transportchip--ice1"
    >
      <span
        class="db-transportchip__text"
      >
        ICE
      </span>
      <span
        class="db-transportchip__text"
      >
        1
      </span>
    </span>
  </span>
</div>
`;

exports[`Transportchip Component should have normal spacing for products with two character 1`] = `
<div>
  <span
    class="db-transportchip"
  >
    <span
      class="db-transportchip__line db-transportchip--ic db-transportchip--ic1"
    >
      <span
        class="db-transportchip__text"
      >
        IC
      </span>
      <span
        class="db-transportchip__text"
      >
        1
      </span>
    </span>
  </span>
</div>
`;

exports[`Transportchip Component should not split Bus 1 1`] = `
<div>
  <span
    class="db-transportchip"
  >
    <span
      class="db-transportchip__line db-transportchip--bus db-transportchip--bus1"
    >
      <span
        class="db-transportchip__text"
      >
        1
      </span>
    </span>
  </span>
</div>
`;

exports[`Transportchip Component should split S 1 1`] = `
<div>
  <span
    class="db-transportchip"
  >
    <span
      class="db-transportchip__line db-transportchip--suburban db-transportchip--s1"
    >
      <span
        class="db-transportchip__text db-transportchip__text--short-prefix"
      >
        S
      </span>
      <span
        class="db-transportchip__text"
      >
        1
      </span>
    </span>
  </span>
</div>
`;

exports[`Transportchip Component should split S1 1`] = `
<div>
  <span
    class="db-transportchip"
  >
    <span
      class="db-transportchip__line db-transportchip--suburban db-transportchip--s1"
    >
      <span
        class="db-transportchip__text db-transportchip__text--short-prefix"
      >
        S
      </span>
      <span
        class="db-transportchip__text"
      >
        1
      </span>
    </span>
  </span>
</div>
`;
